add stats section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <app-nav [data]="navData"></app-nav>
   </div>
   <app-banner></app-banner>
+  <app-stats [data]="statsData"></app-stats>
 </div>
