--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -47,6 +47,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    margin-bottom: 0px;
   }
 
   .banner-title {
