add cardscontainer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
   </div>
   <app-banner></app-banner>
   <app-stats [data]="statsData"></app-stats>
+  <app-cardscontainer [data]="cardsContainerData"></app-cardscontainer>
 </div>
