--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
   <app-banner></app-banner>
   <app-stats [data]="statsData"></app-stats>
   <app-cardscontainer [data]="cardsContainerData"></app-cardscontainer>
+  <app-howitworks [data]="howItWorks"></app-howitworks>
 </div>
