--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
   <app-stats [data]="statsData"></app-stats>
   <app-cardscontainer [data]="cardsContainerData"></app-cardscontainer>
   <app-howitworks [data]="howItWorks"></app-howitworks>
+  <app-cardscontainer [data]="popularRestaurant"></app-cardscontainer>
 </div>
