add downloadapp component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
   <app-cardscontainer [data]="cardsContainerData"></app-cardscontainer>
   <app-howitworks [data]="howItWorks"></app-howitworks>
   <app-cardscontainer [data]="popularRestaurant"></app-cardscontainer>
+  <app-downloadapp></app-downloadapp>
 </div>
