--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
   <app-howitworks [data]="howItWorks"></app-howitworks>
   <app-cardscontainer [data]="popularRestaurant"></app-cardscontainer>
   <app-downloadapp></app-downloadapp>
+  <app-testimonies></app-testimonies>
 </div>
