--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,5 @@
   <app-cardscontainer [data]="popularRestaurant"></app-cardscontainer>
   <app-downloadapp></app-downloadapp>
   <app-testimonies></app-testimonies>
+  <app-footer></app-footer>
 </div>
